tests/snapshots/integration__integration_tests__help__help_hook_pre_merge.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - hook
    - pre-merge
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt hook pre-merge - Run pre-merge hooks

Usage: [1m[36mwt hook pre-merge[0m [36m[OPTIONS][0m [36m[NAME]

[1m[32mArguments:
  [36m[NAME]
          Filter by command name
          
          Supports [1muser:name[0m or [1mproject:name[0m to filter by source. [1muser:[0m alone runs all user hooks; [1mproject:[0m alone runs all project hooks.

[1m[32mOptions:
  [1m[36m-y[0m, [1m[36m--yes
          Skip approval prompts

      [1m[36m--var[0m[36m [0m[36m<KEY=VALUE>
          Override built-in template variable (KEY=VALUE)

  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...
          Verbose output (-v: hooks, templates; -vv: debug report)
